2005-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-properties.h:
	* src/bacon-video-widget-xine.c:
	* src/totem.c: (main):
	* src/vanity.c: (on_about1_activate): update copyrights on some files,
	use translator-credits in vanity, instead of translator_credits
	(Closes: #163221)

2005-01-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_get_subtitle),
	(bacon_video_widget_set_subtitle), (get_list_of_type),
	(bacon_video_widget_get_subtitles),
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_language),
	(bacon_video_widget_set_language), (bacon_video_widget_open),
	(bacon_video_widget_close):
	  Add stream selection. The names need some more work, but hey,
	  it's a start.

2005-01-06  Dennis Cranston <dennis_cranston@yahoo.com>

	* data/totem.glade:  Use header capitalization for command button
	labels.
	
2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences): remove
	hide_prefs, use gtk_widget_hide directly instead, replace hard-coded
	/apps/totem by GCONF_PREFIX, 
	* src/totem.c: (show_controls), (totem_setup_window):
	when setting up the window, take into account the vbox border for the
	width and height, replace hard-coded border width of 1 by a #define

2005-01-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	  Autofoo fixes.

2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem.c: (update_seekable): only change the states of the
	"seekable" widgets if the previous state was different

2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-statusbar.c: (totem_statusbar_set_time): only update
	the time label if the time actually changed

2005-01-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_connection_speed),