@@ -1,3 +1,11 @@
+2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_motion_notify),
+	(bacon_video_widget_button_press),
+	(bacon_video_widget_button_release),
+	(bacon_video_widget_class_init), (bacon_video_widget_new):
+	  Re-add mouse event support through navigation interface.
+
 2005-01-08  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-properties.h:
